test/libyul/yulSyntaxTests/if_statement_invalid_1.yul
{
    if mload {}
}
// ----
// ParserError 2314: (15-16): Expected '(' but got '{'
